[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv_asm = { git = "https://github.com/lighkLife/riscv-asm", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
volatile = "0.3"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
lose-net-stack = { git = "https://github.com/yfblock/lose-net-stack", rev = "db42380" }
easy-fs = { path = "../easy-fs" }
embedded-graphics = "0.7.1"
tinybmp = "0.3.1"
log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
embassy-executor = { version = "0.3.2", features = ["nightly", "executor-thread"] }
embassy-futures = "0.1.1"
embassy-sync = "0.4.0"
static_cell = "2.0.0"
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }

[features]
async=[]

[profile.release]
debug = true
